--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <li>
             <a
-              href="https://github.com/nomedousuario"
+              href="https://github.com/NathanGFreitas"
               title="Ir para o GitHub"
               target="_blank"
             >
